apps/workloads/media/autobrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: autobrr
  template:
    metadata:
      labels:
        app: autobrr
        networking/expose-web-ui: "true"
    spec:
      containers:
        - name: autobrr
          image: ghcr.io/autobrr/autobrr
          ports:
            - name: web-ui
              containerPort: 7474
              protocol: TCP
          startupProbe:
            httpGet:
              path: /api/healthz/readiness
              port: web-ui
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/healthz/readiness
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/healthz/liveness
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
