apps/workloads/media/autobrr/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autobrr-policy
spec:
  endpointSelector:
    matchLabels:
      app: autobrr


  # ----=== Egress ===----
  egress:
    # === Allow access to services ===
    - toServices:
        - k8sService:
            serviceName: qbittorrent-ui
            namespace: media
        - k8sService:
            serviceName: sonarr-ui
            namespace: media
        - k8sService:
            serviceName: radarr-ui
            namespace: media
        - k8sService:
            serviceName: ntfy
            namespace: automation
    # === Allow access to Traefik ===
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "9443" # Traefik container websecure port
              protocol: TCP
            - port: "8443" # Traefik container dmz port (just in case)
              protocol: TCP
    # === Allow access to external for IRC ===
    - toEntities:
        - "world"
